# libicd

./: .gitignore  CMakeLists.txt  README.md  libicd.sln  libicd.vcxproj  libicd.vcxproj.filters  testicd.cpp
src/: BitMask2D.h  JPEG12.cpp  JPEG8.cpp  JPEG_codec.cpp  JPEG_codec.h  LERC_codec.cpp  Makefile  Makefile.lcl.example  PNG_codec.cpp  Packer_RLE.cpp  QB3_codec.cpp  icd_codecs.cpp  icd_codecs.h  netpbm_codec.cpp
src/jpeg12-6b/: jcapimin.c  jchuff.c  jcmainct.c  jcmarker.c  jcmaster.c  jconfig.h  jcparam.c  jcphuff.c  jdapimin.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdphuff.c  jdsample.c  jerror.c  jfdctint.c  jidctflt.c  jidctfst.c  jidctint.c  jmemmgr.c  jmemnobs.c  jquant1.c  jquant2.c
src/lerc1/: Lerc1Image.cpp  Lerc1Image.h
